--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <a href=""><i class="fab fa-facebook"></i></a>
             <a href=""><i class="fab fa-youtube"></i></a>
             <a href="https://api.whatsapp.com/send?phone=59178575353"><i class="fab fa-whatsapp"></i></a>
-            <a href="https://github.com/osder89/primerRepo.git"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/osder89/Prueba.git"><i class="fab fa-github"></i></a>
           </div>
     </footer>
     
